<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="210dp"
        android:text="@string/register"
        android:textColor="#873030"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/company_branch"
        android:inputType="textPersonName"
        android:textColor="#7B1010"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/company_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#7B1010"
        app:layout_constraintTop_toBottomOf="@+id/companyId"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/companyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/company_email"
        android:inputType="textEmailAddress"
        android:textColor="#7B1010"
        app:layout_constraintTop_toBottomOf="@+id/companyName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/companyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Company Password"
        android:textColor="#7B1010"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyEmail" />


    <EditText
        android:id="@+id/companyTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/company_tel"
        android:inputType="phone"
        android:textColor="#7B1010"
        app:layout_constraintTop_toBottomOf="@+id/companyPassword"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/companyLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/company_location"
        android:inputType="text"
        android:textColor="#7B1010"
        app:layout_constraintTop_toBottomOf="@+id/companyTel"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="#84652722"
        android:text="@string/register"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLocation" />

    <TextView
        android:id="@+id/lgn_scrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="148dp"
        android:text="Go to Login Screen"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_reg"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>